@@ -6,9 +6,9 @@ configure = admin/structure/domain/settings
 files[] = domain.migrate.inc
 files[] = tests/domain.test
 
-; Information added by Drupal.org packaging script on 2014-03-02
-version = "7.x-3.11"
+; Information added by Drupal.org packaging script on 2015-08-02
+version = "7.x-3.12"
 core = "7.x"
 project = "domain"
-datestamp = "1393796314"
+datestamp = "1438530847"
 
