@@ -707,14 +707,13 @@ function domain_form_user_form_alter(&$form, &$form_state) {
     }
     $format = domain_select_format();
 
-    $form['domain_user'] = array(
+    $form['domain'] = array(
       '#type' => 'fieldset',
       '#title' => t('Domain access'),
       '#collapsible' => TRUE,
       '#collapsed' => FALSE,
-      '#weight' => 1
     );
-    $form['domain_user']['domain_user'] = array(
+    $form['domain']['domain_user'] = array(
       '#type' => empty($format) ? 'checkboxes' : 'select',
       '#options' => $options,
       '#title' => t('Domain access settings'),
@@ -722,12 +721,12 @@ function domain_form_user_form_alter(&$form, &$form_state) {
       '#default_value' => $default
     );
     if ($format) {
-      $form['domain_user']['domain_user']['#multiple'] = TRUE;
-      $form['domain_user']['domain_user']['#size'] = count($options) > 10 ? 10 : count($options);
+      $form['domain']['domain_user']['#multiple'] = TRUE;
+      $form['domain']['domain_user']['#size'] = count($options) > 10 ? 10 : count($options);
     }
   }
   else {
-    $form['domain_user'] = array(
+    $form['domain'] = array(
       '#type' => 'value',
       '#value' => $default
     );
@@ -1138,7 +1137,11 @@ function domain_lookup($domain_id = NULL, $subdomain = NULL, $reset = FALSE) {
  */
 function domain_default($reset = FALSE, $alter = TRUE) {
   $default = &drupal_static(__FUNCTION__);
+  $altered = &drupal_static(__FUNCTION__ . '_altered');
+
   if (empty($default) || $reset) {
+    $altered = FALSE;
+
     // Temporary hack for update to 7.x.3.
     if (db_table_exists('domain_export')) {
       $default = db_query("SELECT domain_id, subdomain, sitename, scheme, valid, weight, is_default, machine_name FROM {domain} WHERE is_default = 1")->fetchAssoc();
@@ -1158,11 +1161,14 @@ function domain_default($reset = FALSE, $alter = TRUE) {
         'machine_name' => domain_machine_name($default['subdomain']),
       );
     }
-    if ($alter) {
-      // Let submodules overwrite the defaults, if they wish.
-      $default = domain_api($default, $reset);
-    }
   }
+
+  // If an altered version is requested, has $default been altered before?
+  if ($alter && !$altered) {
+    // Let submodules overwrite the defaults, if they wish.
+    $default = domain_api($default, $reset);
+  }
+
   return $default;
 }
 
@@ -3670,7 +3676,7 @@ function domain_features_api() {
 function domain_machine_name_load($machine_name, $full = FALSE) {
   $domain = db_query('SELECT domain_id, subdomain, sitename, scheme, valid, weight, is_default, machine_name FROM {domain} WHERE machine_name = :machine_name', array(':machine_name' => $machine_name))->fetchAssoc();
   if ($full && !empty($domain)) {
-    domain_api($domain, TRUE);
+    $domain = domain_api($domain, TRUE);
   }
   return $domain;
 }
