@@ -276,6 +276,16 @@ class DomainCreateTest extends DomainTestCase {
     $this->assertTrue($domain['machine_name'] == $temp . 'foo', t('Updated domain has proper machine name.'));
   }
 
+  // Test domain_machine_name_load().
+  function testDomainMacineNameLoad() {
+    // For completeness, we should use hook_domain_load() to add data...
+    $this->domainCreateDomains();
+    $domains = domain_domains();
+    foreach ($domains as $domain) {
+      $load = domain_machine_name_load($domain['machine_name'], TRUE);
+      $this->assertTrue($load['domain_id'] == $domain['domain_id'], t('Loaded domain by machine name.'));
+    }
+  }
 }
 
 class DomainHookTest extends DomainTestCase {
@@ -446,6 +456,17 @@ class DomainUnitTest extends DomainTestCase {
   // On setup, install our test module.
   function setUp($list = array()) {
     parent::setUp($list);
+  }
+
+  // Test that domain_default() purges the static when needed.
+  function testDomainDefault() {
+    // Reset the static, and don't allow domain_default() to run domain_api().
+    $domain = domain_default(TRUE, FALSE);
+    $this->assertTrue(empty($domain['path']), t('domain_default() didn\'t call domain_api when not being allowed to do so.'));
+
+    // Now call it again and allow domain_default() to run domain_api().
+    $domain = domain_default();
+    $this->assertTrue(!empty($domain['path']), t('domain_default() successfully purged static after being allowed to run domain_api().'));
   }
 
   // Test that domain_node_load() and domain_get_node_domains() functions properly.
