@@ -8,9 +8,9 @@ core = 7.x
 ; There's a settings page to contril which fields.
 configure = admin/config/media/imagecache-token
 
-; Information added by Drupal.org packaging script on 2015-07-25
-version = "7.x-1.x-dev"
+; Information added by Drupal.org packaging script on 2015-08-02
+version = "7.x-1.0-rc1"
 core = "7.x"
 project = "imagecache_token"
-datestamp = "1437816800"
+datestamp = "1438478943"
 
