@@ -5,6 +5,13 @@
  */
 
 /**
+ * Implements hook_uninstall().
+ */
+function imagecache_token_uninstall() {
+  variable_del('imagecache_token_fields');
+}
+
+/**
  * Implementations of hook_update_N().
  */
 
