@@ -14,12 +14,11 @@ Upgrading to Drupal 7 using Domain Access
 Upgrading to Domain Access 7.x.3 (from 7.x.2)
   - http://drupal.org/node/1280656
 
-
 ===============
 Version history
 ===============
 
-7.x.3.11  02-MAR-2014
+7.x-3.11  02-MAR-2014
 7.x-3.10  02-JUN-2013
 7.x-3.9   03-MAR-2013
 7.x-3.8   27-JAN-2013
